--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,11 @@ body {
 .cat-img {
     cursor: pointer;
 }
+.click-num{
+    background-color: #e0ac55;
+    padding: 10px 20px;
+    -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.5);
+    -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    
+}
