--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    width: 80%;
+    width: 100%;
     height: 100%;
     text-align: center;
     margin: auto;
@@ -19,9 +19,20 @@ body {
 img {
     width: 100%;
 }
-
 .container {
     padding: 20px;
+}
+.main-section{
+    display: inline-block;
+    margin: 10px;
+    vertical-align: top;
+}
+.cats-list{
+    width: 15%;
+}
+
+.show-cats-div{
+    width: 75%;
 }
 
 .cat-container {
@@ -31,7 +42,7 @@ img {
     vertical-align: middle;
 }
 
-.cat-img {
+.cat-Btn {
     position: relative;
     cursor: pointer;
 }
