--- a/css/style.css
+++ b/css/style.css
@@ -19,29 +19,40 @@ body {
 img {
     width: 100%;
 }
+
+input,
+button {
+    font-family: 'Droid Serif', serif;
+    font-size: 16px;
+}
+
 .container {
     padding: 20px;
 }
-.main-section{
+
+.main-section {
     display: inline-block;
     margin: 10px;
     vertical-align: top;
 }
-.cats-list{
+
+.cats-list {
     width: 15%;
 }
-.cat-name-list{
+
+.cat-name-list {
     position: relative;
     margin: 0;
-    color:white;
+    color: white;
     background-color: #e0ac55;
     z-index: 1;
 }
-.show-cats{
+
+.show-cats {
     width: 75%;
 }
 
-.active-cat-img{
+.active-cat-img {
     width: 70%;
 }
 
@@ -62,4 +73,19 @@ img {
     -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
     box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+}
+
+.labels {
+    width: 40%;
+    text-align: right;
+}
+
+.textboxes {
+    width: 40%;
+    text-align: left;
+}
+
+.labels,
+.textboxes {
+    margin: 10px 0;
 }
