--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ button {
     width: 75%;
 }
 
-.active-cat-img {
+.active-cat-img, .labels, .textboxes {
     width: 70%;
 }
 
@@ -75,8 +75,9 @@ button {
     box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
 
+
 .labels {
-    width: 40%;
+    width: 30%;
     text-align: right;
 }
 
@@ -87,5 +88,10 @@ button {
 
 .labels,
 .textboxes {
-    margin: 10px 0;
+    margin: 30px 0;
+}
+
+.textboxes input{
+    display: block;
+    width: 60%;
 }
