--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,9 @@ button {
     width: 75%;
 }
 
-.active-cat-img, .labels, .textboxes {
+.active-cat-img,
+.labels,
+.textboxes {
     width: 70%;
 }
 
@@ -75,7 +77,6 @@ button {
     box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
 
-
 .labels {
     width: 30%;
     text-align: right;
@@ -91,7 +92,11 @@ button {
     margin: 30px 0;
 }
 
-.textboxes input{
+.textboxes input {
     display: block;
     width: 60%;
+}
+
+.errorLabel{
+    color: red;
 }
